finalised fix, removed flex value of one on polaroid div or anything that was causing the content to overspill the viewport

--- a/style/style.css
+++ b/style/style.css
@@ -11,7 +11,7 @@ body {
 .row {
   display: flex;
   flex-wrap: wrap;
-  align-items: stretch;
+  align-items: center;
   justify-content: center;
 }
 .tile {
